<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="sync_now"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_sync"
        android:shortcutShortLabel="@string/shortcut_sync_short"
        android:shortcutLongLabel="@string/shortcut_sync_long">
        <intent
            android:action="com.activeworkbench.mobile.share.action.SYNC_NOW"
            android:targetPackage="com.activeworkbench.mobile.share"
            android:targetClass="com.activeworkbench.mobile.share.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="open_chat"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_chat"
        android:shortcutShortLabel="@string/shortcut_chat_short"
        android:shortcutLongLabel="@string/shortcut_chat_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.activeworkbench.mobile.share"
            android:targetClass="com.activeworkbench.mobile.share.ChatActivity" />
    </shortcut>
</shortcuts>
